fix text spacing on header

--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ header {
   flex-direction: column;
   height: fit-content;
   width: 100%;
+  padding: 20px 0;
   background: linear-gradient(
     190deg,
     #c2c2c2 37.58%,
@@ -58,8 +59,8 @@ header h1 {
   font-weight: normal;
   font-family: "sofia_probold";
   letter-spacing: 3px;
-  margin-block-start: 0.2em;
-  margin-block-end: 0.1em;
+  margin-block-start: 0.7em;
+  margin-block-end: 0.2em;
   /* margin-inline-start: -0.4em; */
   color: #646464;
 }
